<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的汽车小秘</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_to_fuel_mgr">加油记录管理</string>
    <string name="title_activity_repail_mgr">维保记录管理</string>
    <string name="item_to_fuel">加油记录</string>
    <string name="item_repail">维保记录</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="fule_class">燃料类别</string>
    <string name="used_fuel">燃料种类</string>
    <string name="title_error">出错了</string>
    <string name="error_info_null_fuel">没有设置可用燃料</string>
    <string name="error_info_null_fuelclass">没有设置燃料种类</string>
    <string name="error_info_null_vehicle">没有车辆信息</string>
    <string name="error_info_digit_format">数据格式错误</string>
    <string name="error_info_record_not_exist">记录不存在或读取错误</string>
    <string name="tf_title_date">日期</string>
    <string name="tf_title_money">金额</string>
    <string name="tf_title_mileage">里程表</string>
    <string name="tf_title_price">单价</string>
    <string name="tf_title_fuelAmount">油量</string>
    <string name="tf_title_fuelDial">油表</string>
    <string name="tf_title_fuel">燃料</string>
    <string name="tf_title_station">加油站</string>
    <string name="menu_view">显示</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_delete">删除</string>
    <string name="menu_new">新建</string>
    <string name="btn_text_close">关闭</string>
    <string name="btn_text_ok">确定</string>
    <string name="btn_text_cancel">取消</string>
    <string name="btn_text_new_station">新加油站</string>
    <string name="title_activity_to_fuel_record_editor">加油记录详情</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_mgr_fuel">燃料管理</string>
    <string name="menu_mgr_car">车辆管理</string>
    <string name="title_activity_car_info_editor">车辆信息</string>
    <string name="car_info_number">车牌号</string>
    <string name="car_info_usedFuel">燃料</string>
    <string name="car_info_volume">邮箱容积</string>
    <string name="car_info_amount">油表总刻度</string>
    <string name="car_info_period_mileage">保养间隔里程</string>
    <string name="car_info_period_month">保养间隔月份</string>
    <string name="car_info_init_mileage">初始里程</string>
    <string name="car_info_init_fuel">初始油量（升）</string>
    <string name="car_info_init_date">开始使用日期</string>
    <string name="menu_mgr_add_car">添加车辆</string>
    <string name="menu_mgr_edit_car">编辑车辆</string>
    <string name="menu_mgr_remove_car">移除车辆</string>
    <string name="menu_mgr_add_fuel">添加燃料</string>
    <string name="menu_mgr_add_fuelclass">添加燃料类别</string>
    <string name="menu_mgr_remove_fuel">删除燃料</string>
    <string name="title_activity_main_activity2">汽车小秘</string>
    <string name="title_activity_fuel_consumption">油耗统计</string>
    <string name="txt_com_cars">车辆</string>
    <string name="txt_com_years">年份</string>
    <string name="txt_com_stat_range">统计范围</string>
	<string name="txt_com_stat_total_money">金额总计</string>
</resources>
