<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CarInfoEditor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_info_number" />

        <EditText
            android:id="@+id/car_info_number"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_info_usedFuel" />
        
        <TextView
            android:id="@+id/car_info_usedfuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/car_info_volume" />
        <EditText
	        android:id="@+id/car_info_volume"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" />
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/car_info_amount" />
        <EditText
	        android:id="@+id/car_info_amount"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" />
        
    </LinearLayout>

    

    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="10dp" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/car_info_period_mileage" />
        <EditText
	        android:id="@+id/car_info_period_mileage"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" />
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/car_info_period_month" />
        <EditText
	        android:id="@+id/car_info_period_month"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" />
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/car_info_init_mileage" />
        <EditText
	        android:id="@+id/car_info_init_mileage"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" />
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/car_info_init_fuel" />
        <EditText
	        android:id="@+id/car_info_init_fuel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/car_info_init_date" />
        <TextView
            android:id="@+id/car_info_init_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="  ####" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/car_info_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_ok" />

        <Button
            android:id="@+id/car_info_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_cancel" />

    </LinearLayout>

</LinearLayout>
